fixed navbar on mobile presentation

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -9,15 +9,7 @@
     background-color: transparent;
 }
 
-#searchBar {
-	margin-left: 28%;
-	display: inline;
-	margin-top: 20px;
-	width: 25%;
-}
-
-#bs-example-navbar-collapse-1,
-form,
-input {
-	display: inline;
+.searchBar {
+	margin-top: 10px;
+	min-width: 200px;
 }
